--- a/index.html
+++ b/index.html
@@ -10,3 +10,27 @@
     <link rel="stylesheet" href="./styles/style.css">
 
 </head>
+<body class="body">
+
+    <header class="header">
+      <div class="header__logo"></div>
+      <div class="header__line"></div>
+    </header>
+
+  <main>
+    <section class="profile">
+      <div class="profile__person">
+      <div class="profile__avatar"></div>
+      <div class="profile__info">
+        <div class="profile__items">
+        <h2 class="profile__title">Жак-Ив Кусто</h2>
+        <div class="profile__edit-button"></div>
+      </div>
+      <p class="profile__subtitle">Исследователь океана</p>
+      </div>
+    </div>
+      <div class="profile__button"></div>
+    </section>
+  </main>
+
+</body>
