Готовая вёрстка без адаптива

--- a/index.html
+++ b/index.html
@@ -31,6 +31,74 @@
     </div>
       <div class="profile__button"></div>
     </section>
+
+    <section class="elements">
+
+      <div class="element">
+
+          <img src="./vendor/photo1.jpg" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Карачаевск</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+      <div class="element">
+
+          <img src="./vendor/photo2.png" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Гора Эльбрус</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+      <div class="element">
+
+          <img src="./vendor/photo3.png" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Домбай</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+      <div class="element">
+
+          <img src="./vendor/photo4.png" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Гора Эльбрус</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+      <div class="element">
+
+          <img src="./vendor/photo5.png" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Домбай</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+      <div class="element">
+
+          <img src="./vendor/photo6.png" alt="" class="element__photo">
+
+        <div class="element__text">
+          <p class="element__title">Карачаево-Черкесск</p>
+          <div class="element__like"></div>
+        </div>
+      </div>
+
+    </section>
+
+    <footer class="footer">
+      <p class="footer__text">© 2020 Mesto Russia</p>
+    </footer>
   </main>
 
 </body>
