--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div class="profile__info">
         <div class="profile__items">
         <h2 class="profile__title">Жак-Ив Кусто</h2>
-        <div class="profile__edit-button"></div>
+        <button class="profile__edit-button"></button>
       </div>
       <p class="profile__subtitle">Исследователь океана</p>
       </div>
     </div>
-      <div class="profile__button"></div>
+      <button class="profile__button"></button>
     </section>
 
     <section class="elements">
@@ -101,4 +101,22 @@
     </footer>
   </main>
 
+  <div class="popup">
+    <div class="popup__form">
+      <p2 class="popup__title">Редактировать профиль</p2>
+
+
+      <input type="text" placeholder="Имя и Фамилия" class="popup__input popup__input_type_name">
+      <div class="popup__line"></div>
+
+      <input type="text" placeholder="Род деятельности" class="popup__input popup__input_type_job">
+      <div class="popup__line"></div>
+
+      <button class="popup__save-button">Сохранить</button>
+
+    </div>
+    <div class="popup__close-icon"></div>
+  </div>
+
+  <script src="./index.js"></script>
 </body>
