Правки в финальный коммит

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
-    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body class="body">
@@ -122,3 +121,4 @@
 
   <script src="./index.js"></script>
 </body>
+</html>
