--- a/index.html
+++ b/index.html
@@ -3,95 +3,95 @@
 
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mesto</title>
+  <link rel="stylesheet" href="./pages/index.css">
 
 </head>
+
 <body class="body">
 
-    <header class="header">
-      <div class="header__logo"></div>
-      <div class="header__line"></div>
-    </header>
+  <header class="header">
+    <div class="header__logo"></div>
+  </header>
 
   <main>
     <section class="profile">
       <div class="profile__person">
-      <div class="profile__avatar"></div>
-      <div class="profile__info">
-        <div class="profile__items">
-        <h2 class="profile__title">Жак-Ив Кусто</h2>
-        <button class="profile__edit-button"></button>
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар профиля">
+        <div class="profile__info">
+          <div class="profile__items">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button type="click" class="profile__edit-button"></button>
+          </div>
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
       </div>
-      <p class="profile__subtitle">Исследователь океана</p>
-      </div>
-    </div>
-      <button class="profile__button"></button>
+      <button type="click" class="profile__button"></button>
     </section>
 
     <section class="elements">
 
-      <div class="element">
+      <article class="element">
 
-          <img src="./images/photo1.jpg" alt="Карачаевск фото" class="element__photo">
-
-        <div class="element__text">
-          <p class="element__title">Карачаевск</p>
-          <div class="element__like"></div>
-        </div>
-      </div>
-
-      <div class="element">
-
-          <img src="./images/photo2.png" alt="Гора Эльбрус фото" class="element__photo">
+        <img src="./images/photo1.jpg" alt="Карачаевск фото" class="element__photo">
 
         <div class="element__text">
-          <p class="element__title">Гора Эльбрус</p>
-          <div class="element__like"></div>
+          <h2 class="element__title">Карачаевск</h2>
+          <button type="click" class="element__like"></button>
         </div>
-      </div>
+      </article>
 
-      <div class="element">
+      <article class="element">
 
-          <img src="./images/photo3.png" alt="Домбай фото" class="element__photo">
+        <img src="./images/photo2.png" alt="Гора Эльбрус фото" class="element__photo">
 
         <div class="element__text">
-          <p class="element__title">Домбай</p>
-          <div class="element__like"></div>
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button type="click" class="element__like"></button>
         </div>
-      </div>
+      </article>
 
-      <div class="element">
+      <article class="element">
 
-          <img src="./images/photo4.png" alt="Гора Эльбрус фото" class="element__photo">
+        <img src="./images/photo3.png" alt="Домбай фото" class="element__photo">
 
         <div class="element__text">
-          <p class="element__title">Гора Эльбрус</p>
-          <div class="element__like"></div>
+          <h2 class="element__title">Домбай</h2>
+          <button type="click" class="element__like"></button>
         </div>
-      </div>
+      </article>
 
-      <div class="element">
+      <article class="element">
 
-          <img src="./images/photo5.png" alt="Домбай фото" class="element__photo">
+        <img src="./images/photo4.png" alt="Гора Эльбрус фото" class="element__photo">
 
         <div class="element__text">
-          <p class="element__title">Домбай</p>
-          <div class="element__like"></div>
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button type="click" class="element__like"></button>
         </div>
-      </div>
+      </article>
 
-      <div class="element">
+      <article class="element">
 
-          <img src="./images/photo6.png" alt="Карачаево-Черкесск фото" class="element__photo">
+        <img src="./images/photo5.png" alt="Домбай фото" class="element__photo">
 
         <div class="element__text">
-          <p class="element__title">Карачаево-Черкесск</p>
-          <div class="element__like"></div>
+          <h2 class="element__title">Домбай</h2>
+          <button type="click" class="element__like"></button>
         </div>
-      </div>
+      </article>
+
+      <article class="element">
+
+        <img src="./images/photo6.png" alt="Карачаево-Черкесск фото" class="element__photo">
+
+        <div class="element__text">
+          <h2 class="element__title">Карачаево-Черкесск</h2>
+          <button type="click" class="element__like"></button>
+        </div>
+      </article>
 
     </section>
 
@@ -100,25 +100,23 @@
     </footer>
   </main>
 
-  <div class="popup popup_switch_close">
-    <form class="popup__form">
+  <div class="popup">
+    <div class="popup__container">
       <p2 class="popup__title">Редактировать профиль</p2>
+      <button type="button" class="popup__close-icon"></button>
 
-
-      <input type="text" placeholder="Имя" class="popup__input popup__input_type_name">
-      <div class="popup__line"></div>
-
-      <input type="text" placeholder="О себе" class="popup__input popup__input_type_job">
-      <div class="popup__line"></div>
-
+      <form name="popup__form" class="popup__form">
+      <input name="popup__input_type_name" type="text" placeholder="Имя" class="popup__input popup__input_type_name">
+      <input name="popup__input_type_job" type="text" placeholder="О себе" class="popup__input popup__input_type_job">
       <button type="submit" class="popup__save-button">Сохранить</button>
+      </form>
 
-      <button type="click" class="popup__close-icon"></button>
 
-    </form>
+    </div>
 
   </div>
 
-  <script src="./index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
+
 </html>
