--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <div class="popup">
     <div class="popup__container">
-      <p2 class="popup__title">Редактировать профиль</p2>
+      <h2 class="popup__title">Редактировать профиль</h2>
       <button type="button" class="popup__close-icon"></button>
 
       <form name="popup__form" class="popup__form">
