--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="profile__info">
           <div class="profile__items">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button type="click" class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button"></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
       </div>
-      <button type="click" class="profile__button"></button>
+      <button type="button" class="profile__button"></button>
     </section>
 
     <section class="elements">
@@ -39,7 +39,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Карачаевск</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
@@ -49,7 +49,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
@@ -59,7 +59,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Домбай</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
@@ -69,7 +69,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
@@ -79,7 +79,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Домбай</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
@@ -89,7 +89,7 @@
 
         <div class="element__text">
           <h2 class="element__title">Карачаево-Черкесск</h2>
-          <button type="click" class="element__like"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
 
